syntax = "proto3";

option go_package = "./;protos";
package countdownDays;
import "saass.proto";

message CountdownDaysCategory {
  string id = 1;
  string name = 2;
  int64 sort = 3;
  int64 createTime = 4;
  int64 lastUpdateTime = 5;
}
message CountdownDaysEvent {
  string id = 1;
  string name = 2;
  string date = 3;
  string categoryId = 4;
  message RepeatType {
    // 'Never' | 'Day' | 'Week' | 'Month' | 'Year'
    string type = 1;
    int64 num = 2;
  }
  RepeatType repeatType = 5;
  bool top = 6;
  int64 sort = 7;
  int64 createTime = 8;
  int64 lastUpdateTime = 9;
  message CountdownData {
    string nextDate = 1;
    int64 day = 2;
  }
  CountdownData countdownData = 10;
}

message CountdownDaysData {
  repeated CountdownDaysCategory categories = 1;
  repeated CountdownDaysEvent list = 2;
  string authorId = 3;
  int64 createTime = 4;
  int64 lastUpdateTime = 5;
}

// 检测文件更新时间

message GetUploadToken {
  message Request {
    int64 size = 1;
    string hash = 2;
    // saass file rename
    bool rename = 3;
  }
  message Response {
    saass.Urls urls = 1;
    string apiUrl = 2;
    string token = 3;
    int64 chunkSize = 4;
    repeated int64 uploadedOffset = 5;
    int64 uploadedTotalSize = 7;

    saass.FileInfo fileInfo = 6;
  }
}

// 提供的下载地址只能临时下载5分钟
message GetCountdownDaysFileUrls {
  message Request {}
  message Response {
    saass.FileInfo fileInfo = 1;
    saass.Urls urls = 2;
  }
}
